# prodculator-backend-dev

./: .dockerignore  .env.example  .gitignore  CLIENT_CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fix_production_migration.md  production-analysis-engine.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 000000000001_baseline_core_tables.py  07b18434139d_merge_territory_profiles_and_user_.py  0de65d194977_create_grant_opportunities_table.py  156155142665_expand_film_festivals_schema.py  1a3a25b27633_create_email_gating_records_table.py  4c5f82471e4f_add_b2b_intelligence_tables.py  7d17c136f7f8_add_processed_webhook_events_table.py  a1b2c3d4e5f6_add_request_metadata_to_reports.py  a1b2c3d4e5f7_add_applicable_formats_to_incentive_programs.py  a5dcb3d855ee_add_tmdb_id_and_source_to_comparable_.py  a8b9c0d1e2f3_fix_iftc_rebate_cap.py  (+101 more)
app/: alembic_utils.py  main.py  worker.py
docs/: admin_endpoints.md  frontend-google-auth.md  report-pipeline-architecture.md  script-analysis-implementation-plan.md  scriptelligence-report-gaps-implementation-guide.md  system-architecture.md  v3-frontend-migration-guide.md
scripts/: b2b_signal_v2_cleanup.py  backfill_production_signals.py  backfill_stripe_subscriptions.py  backfill_user_geo.py  check_db_state.py  create_demo_account.py  create_demo_prices.py  debug_crew_costs.py  reconcile_schema.py  reset_scraper_data.py  seed_admin.py  test_territories.py  test_webhook_upgrade.py  verify_incentive_waterfall.py
tests/: _stub_boot.py  admin_fakes.py  b2b_signal_v2_checks.py  conftest.py  test_admin_routes.py  test_admin_users_admin.py  test_auth_cookies.py  test_auth_routes.py  test_b2b_routes.py  test_b2b_signal_v2.py  test_backfill_user_geo.py  test_bankability_wiring.py  test_billing_history.py  test_business_metrics_admin.py  test_calculator_routes.py  test_calculator_service.py  test_contact_routes.py  test_crew_costs_admin.py  test_data_endpoints.py  test_data_sources_admin.py  test_distributor_representation_matching.py  test_dunning.py  test_email_gating_admin.py  test_email_service.py  test_emails_routes.py  test_excel_export.py  test_festivals_admin.py  test_fx_service.py  test_grants_admin.py  test_health.py  test_incentive_waterfall_regression.py  test_incentives_admin.py  test_matching_parity.py  test_narrative_merge.py  test_openai_fallback.py  test_payment_upgrade_e2e.py  test_payments_routes.py  test_pdf_reports_admin.py  test_permissions_failclosed.py  test_plan_catalog.py  (+24 more)
(+165 files in other folders)
