[project]
name = "prodculator-api"
version = "1.0.0"
description = "Prodculator Backend API — Production Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.22",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.2.0",
    "authlib>=1.4.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "stripe>=8.0.0",
    "sendgrid>=6.11.0",
    "Jinja2>=3.1.3",
    "pdfplumber>=0.10.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
