[project]
name = "prodculator-api"
version = "1.0.0"
description = "Prodculator Backend API — Production Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.22",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.2.0",
    "authlib>=1.4.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anthropic>=0.69.0",
    "stripe>=8.0.0",
    "Jinja2>=3.1.3",
    "pdfplumber>=0.10.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E402 (import-not-at-top) is ignored project-wide: this codebase deliberately
# places `logger = logging.getLogger(__name__)` and env/import bootstrapping
# before some imports (routers, test setup). Everything else in the default
# (E, F) rule set is enforced.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway locals and compact assert helpers.
"tests/**" = ["F841", "E741", "E701", "E702"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
